--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -28,11 +29,13 @@
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
     "randomstring": "^1.2.3",
     "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@types/apidoc": "^0.50.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/exif": "^0.6.3",
@@ -58,7 +61,7 @@
     "expect": "^29.4.1",
     "gts": "^3.1.1",
     "jest": "^29.3.1",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.1.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
